<resources>
    <string name="app_name">ADS</string>
    <string name="boton_client">CLIENTE</string>
    <string name="boton_worker">TRABAJADOR</string>
    <string name="select_tipe_user">¡Bienvenido/a! Selecciona el tipo de Usuario</string>
    <string name="boton_login">INICIAR SESIÓN</string>
    <string name="email">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="boton_register">REGISTRARSE</string>
    <string name="boton_usuario">USUARIO</string>
    <string name="boton_trabajador">TRABAJADOR</string>
    <string name="documentid">Numero de Documento</string>
    <string name="date">Fecha de Nacimiento</string>
    <string name="datexp">Fecha de Expedicion</string>
    <string name="ddmmaaaa">DD/MM/AAAA</string>
    <string name="fromexp">Lugar de Expedicion</string>
    <string name="UserName">Nombres</string>
    <string name="UserLastName">Apellidos</string>
    <string name="UserEmail">Correo</string>
    <string name="UserPassword">Contraseña</string>
    <string name="UserPhone">Telefono</string>
    <string name="UserAddress">Direccion</string>
    <string name="UserContinue">Continuar</string>
    <string name="Direccion">Calle 3####</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre de Usuario</string>
    <string name="nav_header_subtitle">username@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Direcciones</string>
    <string name="mostrar_mapa">Ver Mapa</string>
    <string name="Mostrar">Mostrar</string>
    <string name="direcciones">DIRECCIONES</string>
    <string name="type_work">Tipo de Trabajo</string>
    <string name="vermapaworker">Ver Mapa</string>
    <string name="conectarse">Conectarse</string>
    <string name="worker_photo_desc">Descripcion</string>
    <string name="find_stores">Buscar Tiendas</string>


    <string-array name="service_types">
        <item>Carpintería</item>
        <item>Ferretería</item>
        <item>Pintor</item>
        <item>Electricista</item>
        <item>Plomería</item>
        <item>Jardinería</item>
        <item>Albañilería</item>
    </string-array>


        <string name="logo_description">Logo de la aplicación</string>
        <string name="footer_text">© 2024 ADS. Todos los derechos reservados.</string>


    <string name="fix_depot_title">Fix Depot</string>
    <string name="tools_banner_description">Tools and materials banner</string>
    <string name="featured_tools">Featured Tools</string>
    <string name="all_tools">All Tools</string>
    <string name="tool_image_description">Tool image</string>
    <string name="available_tools">Herramientas destacadas</string>

    <!-- Martillo -->
    <string name="hammer">Martillo</string>
    <string name="hammer_description">Un martillo resistente para trabajos duros</string>
    <string name="hammer_price">$60,000 COP</string>

    <!-- Juego de Destornilladores -->
    <string name="screwdriver_set">Juego de Destornilladores</string>
    <string name="screwdriver_set_description">Un juego de destornilladores de precisión</string>
    <string name="screwdriver_set_price">$80,000 COP</string>

    <!-- Taladro Eléctrico -->
    <string name="power_drill">Taladro Eléctrico</string>
    <string name="power_drill_description">Taladro eléctrico inalámbrico con batería</string>
    <string name="power_drill_price">$200,000 COP</string>

    <!-- Juego de Llaves -->
    <string name="wrench_set">Juego de Llaves</string>
    <string name="wrench_set_description">Un juego completo de llaves</string>
    <string name="wrench_set_price">$120,000 COP</string>

    <!-- Cinta Métrica -->
    <string name="measuring_tape">Cinta Métrica</string>
    <string name="measuring_tape_description">Una cinta métrica duradera</string>
    <string name="measuring_tape_price">$40,000 COP</string>

    <!-- Sierra -->
    <string name="saw">Sierra</string>
    <string name="saw_description">Sierra manual de alta calidad</string>
    <string name="saw_price">$100,000 COP</string>

    <!-- Nivel -->
    <string name="level">Nivel</string>
    <string name="level_description">Una herramienta confiable para verificar el nivel</string>
    <string name="level_price">$48,000 COP</string>

    <!-- Alicates -->
    <string name="pliers">Alicates</string>
    <string name="pliers_description">Alicates duraderos para varios usos</string>
    <string name="pliers_price">$32,000 COP</string>

    <!-- Destornillador Eléctrico -->
    <string name="electric_screwdriver">Destornillador Eléctrico</string>
    <string name="electric_screwdriver_description">Destornillador eléctrico recargable</string>
    <string name="electric_screwdriver_price">$160,000 COP</string>

    <string name="map_client_title">Mapa Cliente</string>
    <string name="location_permission_title">Permisos de Ubicacion</string>
    <string name="location_permission_message">Concede permisos de Ubicacion a la Aplicacion</string>
    <string name="ok">Aceptar</string>
    <string name="location_permission_denied">Permisos denegados</string>
    <string name="worker_info_title">Informacion del trabajador</string>
    <string name="worker_info_message">Mensaje</string>
    <string name="request_service">Solicitar servicio</string>
    <string name="cancel">Cancelar</string>
    <string name="map_worker_title">Mapa Trabajador</string>
    <string name="filter_icon">Filtrar</string>

</resources>