<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ads.activities.MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.6"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintWidth_percent="0.8">

        <Button
            android:id="@+id/buttonLoginClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FE8118"
            android:fontFamily="sans-serif"
            android:minHeight="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/boton_client"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFEBDA"
            android:textColorHint="#FFE9D7"
            android:textColorLink="#FFEBDA"
            android:textSize="14sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/buttonLoginWorker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#8DFF8117"
            android:elevation="2dp"
            android:fontFamily="sans-serif"
            android:minHeight="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:stateListAnimator="@null"
            android:text="@string/boton_worker"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFEBDA"
            android:textColorHint="#FFE9D7"
            android:textColorLink="#FFEBDA"
            android:textSize="14sp"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="190dp"
        android:text="@string/select_tipe_user"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="86dp"
        android:layout_height="73dp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/userlogo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.547"
        app:srcCompat="@drawable/workerlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>